Penambahan Section quote dan lain lain

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/header.css">
 
+  <!-- Aox -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -98,7 +101,7 @@
   <section id="team">
     <div class="container">
       <div class="team-wrapper">
-        <p class="content-top">""</p>
+        <p class="content-top" >""</p>
         <p>
           Clevāra is a team of UI/UX, Back End and Front End developers with a vision to digitalise Indonesia’s business
           industry.
@@ -206,11 +209,11 @@
 
   <section id="quotes" style="background-image: url('./assets/img/quotes.jpg');">
     <div class="container">
-      <div class="quotes-wrapper">
-        <div class="logo-quotes">
+      <div class="row quotes-wrapper">
+        <div class="col-5 logo-quotes">
           <img src="./assets/img/logo-quotes.svg" alt="">
         </div>
-        <div class="quotes-content">
+        <div class="col quotes-content">
           <h1>
             “Let us focus on your technological needs, so you
             can focus on everything else”
@@ -219,6 +222,59 @@
       </div>
     </div>
   </section>
+
+  <section id="our-work">
+    <div class="container">
+      <div class="title">
+        <h1 class="text-center">Our Works</h1>
+        <p class="text-center">
+          ALL WORKS
+          <span>
+            <svg width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M16.3536 4.35355C16.5488 4.15829 16.5488 3.84171 16.3536 3.64645L13.1716 0.464466C12.9763 0.269204 12.6597 0.269204 12.4645 0.464466C12.2692 0.659728 12.2692 0.976311 12.4645 1.17157L15.2929 4L12.4645 6.82843C12.2692 7.02369 12.2692 7.34027 12.4645 7.53553C12.6597 7.7308 12.9763 7.7308 13.1716 7.53553L16.3536 4.35355ZM0 4.5H16V3.5H0V4.5Z"
+                fill="#DCBF01" />
+            </svg>
+          </span>
+        </p>
+      </div>
+      <div class="grid">
+        <div class="card-gambar">
+          <img src="./assets/img/work1.jpg" class="fluid" alt="">
+          <p>Vulputate sagittis lorem</p>
+        </div>
+        <div class="card-gambar dua">
+          <img src="./assets/img/work2.png" class="fluid" alt="">
+          <p>Vulputate sagittis lorem</p>
+        </div>
+        <div class="card-gambar">
+          <img src="./assets/img/work3.png" class="fluid" alt="">
+          <p>Vulputate sagittis lorem</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="appro">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>Approach</h1>
+          <span></span>
+        </div>
+        <div class="col">
+          <p>
+            Sollicitudin velit aliquet id in feugiat odio lacus rhoncus. Placerat enim condimentum parturient lorem eget mauris cras
+            ornare. Mi maecenas congue amet porttitor non ultrices lobortis ultricies arcu. Diam molestie facilisis arcu pretium
+            senectus. Nam non elit amet, tristique faucibus rhoncus convallis non et.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Aox -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <script>
       const buttonMenu = document.getElementById("toggle-menu");
