--- a/index.html
+++ b/index.html
@@ -258,20 +258,129 @@
   <section id="appro">
     <div class="container">
       <div class="row">
-        <div class="col">
-          <h1>Approach</h1>
-          <span></span>
+        <div class="col left">
+          <div class="left-wrapper">
+            <h1>Approach</h1>
+            <span></span>
+          </div>
         </div>
-        <div class="col">
+        <div class="col-6">
           <p>
             Sollicitudin velit aliquet id in feugiat odio lacus rhoncus. Placerat enim condimentum parturient lorem eget mauris cras
             ornare. Mi maecenas congue amet porttitor non ultrices lobortis ultricies arcu. Diam molestie facilisis arcu pretium
             senectus. Nam non elit amet, tristique faucibus rhoncus convallis non et.
           </p>
+          <div class="box-wrapper">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
+  <section id="contact">
+    <div class="container">
+      <div class="contact-wrapper">
+        <div class="title">
+          <h1 class="text-center">Contact US</h1>
+        </div>
+        <div class="content">
+          <p class="text-center">
+            Dui tristique viverra ac id dui sagittis commodo in massa diam ultrices sit fringilla ut vulputate aliquam nunc
+            massa
+            ultrices amet.
+          </p>
+        </div>
+        <div class="row">
+          <div class="col">
+            <form action="">
+              <input type="text" placeholder="Fullname">
+              <input type="number" placeholder="Phone Number">
+            </form>
+          </div>
+          <div class="col">
+            <form action="">
+              <input type="text" placeholder="Company">
+              <input type="email" placeholder="Email">
+            </form>
+          </div>
+          <div class="text-area">
+            <form action="">
+              <textarea name="" id="text-area" cols="auto" rows="5" placeholder="Notes"></textarea>
+            </form>
+          </div>
+        </div>
+        <div class="wrapper">
+          <a href="#">SEND
+            <span>
+              <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M1.14486 11.3337C0.956252 11.1451 0.939106 10.8499 1.09342 10.6419L1.14486 10.5824L5.7273 5.99967L1.14486 1.41699C0.956252 1.22838 0.939106 0.933248 1.09342 0.725273L1.14486 0.665689C1.33346 0.477084 1.6286 0.459938 1.83657 0.614251L1.89616 0.665689L6.85449 5.62402C7.0431 5.81263 7.06024 6.10777 6.90593 6.31574L6.85449 6.37532L1.89616 11.3337C1.68869 11.5411 1.35232 11.5411 1.14486 11.3337Z"
+                  fill="#DCBF01" />
+              </svg>
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+    <div class="row">
+      <div class="col foo-left">
+        <h1>Office</h1>
+        <p>Ruko Seasons City B-25, Jembatan Besi, <br> Tambora, Jakarta Barat, 11320</p>
+        <p class="email">halo@clevara.id</p>
+        <p class="nomor">012345678910</p>
+      </div>
+      <div class="col foo-right">
+        <div class="right-wrapper">
+          <div class="sosmed">
+            <div class="icon">
+              <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M21 0.5C21.1486 0.502997 21.2896 0.530161 21.4304 0.597119C21.5756 0.666564 21.7034 0.771198 21.8 0.9C21.8634 0.994393 21.8485 0.966067 21.8 0.9C21.9295 1.0727 22 1.28417 22 1.5C21.9996 1.44673 21.9974 1.42362 22 1.5V16.5C22 17.0523 21.5523 17.5 21 17.5H1C0.447715 17.5 0 17.0523 0 16.5V1.5C0 1.32097 0.0485666 1.14321 0.139924 0.989669C0.326093 0.675979 0.648555 0.507086 1 0.5H21ZM20 3.5L11.6 9.8C11.28 10.04 10.852 10.064 10.5104 9.872L10.4 9.8L2 3.5V15.5H20V3.5ZM4 2.5L11 7.75L18 2.5H4Z"
+                  fill="#FAFAFA" />
+              </svg>
+            </div>
+            <div class="icon">
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M5 10C5 7.23857 7.23857 5 10 5C12.7614 5 15 7.23857 15 10C15 12.7614 12.7614 15 10 15C7.23857 15 5 12.7614 5 10ZM10 7C8.34313 7 7 8.34313 7 10C7 11.6569 8.34313 13 10 13C11.6569 13 13 11.6569 13 10C13 8.34313 11.6569 7 10 7Z"
+                  fill="#FAFAFA" />
+                <path
+                  d="M16.5 4.5C16.5 5.0523 16.0523 5.5 15.5 5.5C14.9477 5.5 14.5 5.0523 14.5 4.5C14.5 3.9477 14.9477 3.5 15.5 3.5C16.0523 3.5 16.5 3.9477 16.5 4.5Z"
+                  fill="#FAFAFA" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M0 5C0 2.23858 2.23858 0 5 0H15C17.7614 0 20 2.23858 20 5V15C20 17.7614 17.7614 20 15 20H5C2.23858 20 0 17.7614 0 15V5ZM5 2C3.34314 2 2 3.34314 2 5V15C2 16.6569 3.34314 18 5 18H15C16.6569 18 18 16.6569 18 15V5C18 3.34314 16.6569 2 15 2H5Z"
+                  fill="#FAFAFA" />
+              </svg>
+            </div>
+            <div class="icon">
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M6.18922 16.6708V7.75701H3.3291V16.6708H6.18922ZM4.86596 6.4077C5.81933 6.4077 6.41324 5.72523 6.41324 4.87084C6.39761 4.00082 5.81933 3.33398 4.88159 3.33398C3.94384 3.33398 3.33431 4.00082 3.33431 4.87084C3.33431 5.72523 3.92822 6.4077 4.84512 6.4077H4.86596Z"
+                  fill="#FAFAFA" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M13.3683 7.55371C11.8523 7.55371 11.201 8.4081 10.7843 9.002V7.7621H7.91895V16.6707H10.7843V11.5964C10.7843 11.3359 10.8051 11.0755 10.8833 10.8931C11.0916 10.3722 11.5605 9.83556 12.3524 9.83556C13.3891 9.83556 13.8059 10.6326 13.8059 11.7996V16.6707H16.6712V11.4662C16.6712 8.79362 15.2542 7.55371 13.3683 7.55371Z"
+                  fill="#FAFAFA" />
+                <path
+                  d="M18.4006 0H1.70878C0.797083 0 0 0.656421 0 1.5577V18.286C0 19.1925 0.797083 20 1.70878 20H18.3954C19.3123 20 20 19.1873 20 18.286V1.5577C20.0052 0.656421 19.3123 0 18.4006 0ZM18.2339 18.3381C18.1766 18.3381 1.92238 18.3381 1.8286 18.3381C1.73483 18.3381 1.6671 18.2652 1.6671 18.1766C1.6671 18.088 1.6671 1.8286 1.6671 1.77129C1.6671 1.71399 1.7192 1.6671 1.77129 1.6671C1.82339 1.6671 18.1818 1.6671 18.2339 1.6671C18.286 1.6671 18.3381 1.7192 18.3381 1.77129C18.3381 2.98515 18.3381 18.1766 18.3381 18.2339C18.3381 18.2808 18.2912 18.3381 18.2339 18.3381Z"
+                  fill="#FAFAFA" />
+              </svg>
+            </div>
+          </div>
+          <div class="copyright">
+            <p>&copy; Clevara 2021 - All Rights Reserved</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </footer>
 
   <!-- Aox -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
