Penambahan Slide clien

--- a/index.html
+++ b/index.html
@@ -280,6 +280,45 @@
     </div>
   </section>
 
+  <section id="clien">
+    <div class="container-fluid">
+      <div class="d-flex">
+        <div class="left">
+          <div class="left-wrapper">
+            <div class="title">
+              <h1 class="text-center">Client List</h1>
+            </div>
+            <div class="content">
+              <p class="text-center">Explore All Clevara Partners</p>
+            </div>
+            <div class="action">
+              <div class="total">
+                <p>1<span> / 2</span></p>
+              </div>
+              <div class="arrow">
+                <img src="./assets/img/icon/left.svg" alt="">
+              </div>
+              <div class="arrow">
+                <img src="./assets/img/icon/right.svg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <div class="center">
+            <img src="./assets/img/kedai1.svg" alt="">
+          </div>
+          <div class="box">
+            <img src="./assets/img/c-2.svg" alt="">
+          </div>
+          <div class="box-right">
+            <img src="./assets/img/c-3.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="contact">
     <div class="container">
       <div class="contact-wrapper">
