Membuat Tampilan Mobile dengan 360px

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./assets/css/main.css">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/header.css">
-
+  <link rel="stylesheet" href="./assets/css/mobile.css">
+  <link rel="stylesheet" href="./assets/css/mobile1.css">
   <!-- Aox -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -72,16 +73,15 @@
           </div>
         </div>
         <div class="col">
-          <h1>Your Tecnovation</h1>
-          <h1>Partner Here!</h1>
+          <h1>Your Tecnovation <br>Partner Here!</h1>
         </div>
       </div>
       <div class="row button">
         <div class="left">
           <h3>1 <span>/ 3</span></h3>
         </div>
-        <div class="col d-flex align-items-center justify-content-between">
-          <div class="col-left d-flex">
+        <div class="col">
+          <div class="col-left">
             <div class="wrapper me-4">
               <img src="./assets/img/icon/left.svg" alt="">
             </div>
@@ -89,7 +89,7 @@
               <img src="./assets/img/icon/right.svg" alt="">
             </div>
           </div>
-          <div class="col-right d-flex">
+          <div class="col-right ">
             <img src="./assets/img/icon/mouse.svg" alt="">
             <p class="d-flex align-items-center">Scroll Down</p>
           </div>
@@ -152,8 +152,11 @@
             <h1>Powerboard <br> CMS </h1>
           </div>
           <div class="content">
-            <p>Vulputate sagittis lorem ligula egestas risus, lectus elementum integer pellentesque erat purus, amet, sodales
+            <p class="dekstop">Vulputate sagittis lorem ligula egestas risus, lectus elementum integer pellentesque erat purus, amet, sodales
             adipiscing nisl ut habitasse a, at varius ullamcorper ridiculus est odio amet nibh tincidunt hendrerit amet</p>
+            <p class="mobile">
+              A ut lacus, aenean ullamcorper proin nascetur adipiscing mi placerat cras consectetur
+            </p>
             <a href="#">Read more 
               <span>
                 <svg width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -171,7 +174,7 @@
 
   <section id="about-partner">
     <div class="container">
-      <div class="row d-flex">
+      <div class="row">
         <div class="about-left">
           <div class="about-wrapper">
             <h1 class="title">
@@ -282,7 +285,7 @@
 
   <section id="clien">
     <div class="container-fluid">
-      <div class="d-flex">
+      <div class="flex">
         <div class="left">
           <div class="left-wrapper">
             <div class="title">
