--- a/index.html
+++ b/index.html
@@ -335,18 +335,20 @@
             ultrices amet.
           </p>
         </div>
-        <div class="row">
-          <div class="col">
-            <form action="">
-              <input type="text" placeholder="Fullname">
-              <input type="number" placeholder="Phone Number">
-            </form>
-          </div>
-          <div class="col">
-            <form action="">
-              <input type="text" placeholder="Company">
-              <input type="email" placeholder="Email">
-            </form>
+        <div class="form">
+          <div class="form-wrapper">
+            <div class="col">
+              <form action="">
+                <input type="text" placeholder="Fullname">
+                <input type="number" placeholder="Phone Number">
+              </form>
+            </div>
+            <div class="col">
+              <form action="">
+                <input type="text" placeholder="Company">
+                <input type="email" placeholder="Email">
+              </form>
+            </div>
           </div>
           <div class="text-area">
             <form action="">
