--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   <title>Clevara</title>
 </head>
@@ -144,8 +145,8 @@
           </menu>
           <div class="button-slide d-flex">
             <p>1 <span> / 2</span></p>
-            <button><img src="./assets/img/icon/left.svg" alt="left"></button>
-            <button><img src="./assets/img/icon/right.svg" alt="right"></button>
+            <button class="one"><img src="./assets/img/icon/left.svg" alt="left"></button>
+            <button class="true"><img src="./assets/img/icon/right.svg" alt="right"></button>
           </div>
 
           <div class="title-content">
