--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <img class="logo desktop-none" src="./assets/img/icon/logo.svg">
             <div class="nav-wrapper">
             <ul>
-              <li> <a href="#">Home</a> </li>
-              <li> <a href="#">Our Product</a> </li>
+              <li> <a href="index.html">Home</a> </li>
+              <li> <a href="pages/product.html">Our Product</a> </li>
               <li> <a href="#">About Partnership</a> </li>
             </ul>
             <ul>
