Mobile dan Responsive pada pages product

--- a/pages/product.html
+++ b/pages/product.html
@@ -67,7 +67,10 @@
           </div>
         </div>
         <div class="right">
-          <h1>Our Products</h1>
+          <h1 class="none-mobile">Our Products</h1>
+          <h1 class="none-desktop">
+            Your Technovation Partner Here!
+          </h1>
           <p>
             Powerboard is a Content Management System built to allow <br> website owners to Create, Rewrite, Update and Delete your <br>
             own content.
