--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -46,7 +46,7 @@
               <ul>
                 <li> <a href="../index.html">Home</a> </li>
                 <li> <a href="../pages/product.html">Our Product</a> </li>
-                <li> <a href="#">About Partnership</a> </li>
+                <li> <a href="./about.html">About Partnership</a> </li>
               </ul>
               <ul>
                 <li> <a href="#">Contact Us</a> </li>
